# fmd

./: CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md  install-rust.sh  mdq
.github/workflows/: ci.yml  release.yml
src/: main.rs
src/tests/: application.rs  author.rs  content_filtering.rs  dates.rs  enumeration.rs  file_ops.rs  filters.rs  frontmatter.rs  metadata.rs  mod.rs  yaml_helpers.rs
tests/: integration_tests.rs
