[package]
name = "fmd"
version = "0.1.0"
edition = "2021"
description = "Find Markdown files by metadata - Search by tags, frontmatter, and custom fields"
license = "MIT"
repository = "https://github.com/zhouer/fmd"
keywords = ["markdown", "search", "cli", "notes", "frontmatter"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "fmd"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rayon = "1.10"
anyhow = "1.0"
globset = "0.4"
ignore = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
